k8s/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-bank-ingress
  namespace: my-bank
spec:
  rules:
    - host: my-bank.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: front-ui
                port:
                  number: 6085
          - path: /accounts
            pathType: Prefix
            backend:
              service:
                name: api-gateway
                port:
                  number: 6080
          - path: /transfers
            pathType: Prefix
            backend:
              service:
                name: api-gateway
                port:
                  number: 6080
          - path: /cash
            pathType: Prefix
            backend:
              service:
                name: api-gateway
                port:
                  number: 6080
          - path: /notifications
            pathType: Prefix
            backend:
              service:
                name: api-gateway
                port:
                  number: 6080
          - path: /realms
            pathType: Prefix
            backend:
              service:
                name: keycloak
                port:
                  number: 6060
